--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,10 +8,11 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.31.0"
-gradio = "^4.13.0"
+gradio = "^4.18.0"
 loguru = "^0.7.2"
 tinydb = "^4.8.0"
 edge-tts = "^6.1.9"
+elevenlabs = "^0.2.27"
 
 
 [[tool.poetry.source]]
